--- a/estilos.css
+++ b/estilos.css
@@ -1,8 +1,13 @@
 h2{
-background-color: #FF0000;
-color: #F9FF00;
+    background-color: #FF0000;
+    color: #F9FF00;
+    margin-bottom: 0px;
+    margin-top: 0px;
+
 }
 h1{
-background-color: #F9FF00;
-color: #FF0000;
+    background-color: #F9FF00;
+    color: #FF0000;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
